--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.10.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-flat-grid-view": "^1.0.4",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gradient-buttons": "^2.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "^4.3.4",
-    "react-native-screens": "^3.17.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-super-grid": "^4.6.1"
   },
   "devDependencies": {
