--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.10.0",
+    "jest": "^26.6.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-flat-grid-view": "^1.0.4",
