--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/
 /src/Data/Repositories/FirebaseConfig/constants.js
+/app/data/firebaseConfig/constants.js
 .expo/
 dist/
 npm-debug.*
