--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-super-grid": "^4.6.1"
+    "react-native-super-grid": "^4.6.1",
+    "expo-image-picker": "~13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
