--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "expo": "~46.0.9",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.10.0",
     "jest": "^26.6.3",
@@ -32,8 +33,8 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-super-grid": "^4.6.1",
-    "expo-image-picker": "~13.3.1"
+    "react-native-shake-text": "^0.1.1",
+    "react-native-super-grid": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
