--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
+    "combobox-react-native": "^1.1.0",
     "expo": "~46.0.9",
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
