--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^26.6.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-flat-grid-view": "^1.0.4",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gradient-buttons": "^2.0.2",
